default-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-webapp
  namespace: app-space
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default-webapp
  template:
    metadata:
      labels:
        app: default-webapp
    spec:
      containers:
      - name: default-webapp
        image: kodekloud/ecommerce:404
        ports:
        - containerPort: 8080
          protocol: TCP
